# dx2

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: build_test.yml
documentation/: models.md
dx2/: CMakeLists.txt  beam.cxx  beam_io.cxx  beam_ops.cxx  crystal.cxx  detector.cxx  detector_attenuations.cxx  experiment.cxx  goniometer.cxx  h5read_processed.cxx  h5write.cxx  imagesequence.cxx  reflection.cxx  scan.cxx  utils.cxx
dx2/h5/: h5read_processed.cxx  h5write.cxx
include/: gemmi
include/dx2/: beam.h  beam.hpp  beam_io.hpp  beam_ops.hpp  crystal.h  crystal.hpp  detector.h  detector.hpp  detector_attenuations.hpp  experiment.h  experiment.hpp  goniometer.h  goniometer.hpp  h5read_processed.h  imagesequence.hpp  imageset.hpp  reflection.hpp  scan.h  scan.hpp  simple_models.cc  tensor.hpp  utils.h  utils.hpp
include/dx2/h5/: h5read_processed.hpp  h5write.hpp
tests/: CMakeLists.txt  test_beam.cxx  test_beam_ops.cxx  test_crystal.cxx  test_detector_attenuations.cxx  test_goniometer.cxx  test_make_models.cxx  test_read_h5_array.cxx  test_reflection_table.cxx  test_tensor.cxx  test_write_h5_array.cxx
